# dra

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  ci.yml  install.yml  pr.yml  release.yml
assets/: README.md  demo.tape
devtools/: Dockerfile.fedora  Dockerfile.fedora-base  Dockerfile.ubuntu  Dockerfile.ubuntu-base  Makefile  push-base-image.sh
docs/: RELEASE.md
scripts/: create-deb.sh  create-github-release.sh  create-release-archive.sh  upload-github-release-assets.sh
scripts/ci/: build-tools.sh
src/: env_var.rs  main.rs  temp_file.rs  vector.rs
src/cli/: clipboard.rs  color.rs  completion_handler.rs  download_handler.rs  download_spinner.rs  environment.rs  find_asset_by_system.rs  github_release.rs  mod.rs  parse_repository.rs  progress_bar.rs  result.rs  root_command.rs  select.rs  select_assets.rs  spinner.rs  temp_file.rs  untag_handler.rs
src/cli/handlers/: common.rs  completion.rs  download.rs  download_handler.rs  mod.rs  result.rs  select.rs  untag.rs  untag_handler.rs
src/cli/handlers/download/: find_asset_by_os_arch.rs  find_asset_by_system.rs  mod.rs
src/github/: client.rs  constants.rs  error.rs  mod.rs  release.rs  release_new.rs  repository.rs  response.rs  tagged_asset.rs
src/installer/: archive.rs  archive_installer.rs  cleanup.rs  command.rs  compressed_file.rs  compressed_file_installer.rs  debian.rs  debian_installer.rs  destination.rs  error.rs  executable.rs  executable_file.rs  executable_file_installer.rs  file.rs  install.rs  mod.rs  result.rs  rpm_installer.rs  seven_zip_archive_installer.rs  tar_archive.rs  tar_archive_installer.rs  zip_archive.rs  zip_archive_installer.rs
src/installer/tests/: mod.rs  supported_file_test.rs
src/system/: core.rs  find_asset_by_system.rs  linux.rs  macos.rs  mod.rs  supported_systems.rs  system.rs  windows.rs
tests/: README.md  debian.rs  fedora.rs  integration_tests.rs
tests/assertions/: mod.rs
tests/docker/: mod.rs
tests/fs/: mod.rs
