[package]
name = "dra"
version = "0.7.0"
edition = "2021"
authors = ["Cosimo Matteini <dev.matteini@gmail.com>"]
description = "A command line tool to download release assets from GitHub"
homepage = "https://github.com/devmatteini/dra"
repository = "https://github.com/devmatteini/dra"
documentation = "https://github.com/devmatteini/dra"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["github", "cli"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
ureq = { version = "2.10.1", default-features = false, features = ["tls", "json", "proxy-from-env"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
dialoguer = "0.11.0"
indicatif = "0.17.9"
uuid = { version = "1.11.0", features = ["v4"] }
ctrlc = "3.4.5"
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
flate2 = { version = "1.0.35", features = ["zlib"] }
tar = "0.4.43"
xz2 = "0.1.7"
bzip2 = "0.5.0"
urlencoding = "2.1.3"
itertools = "0.14.0"

[dev-dependencies]
test-case = "3.3.1"
assert_cmd = "2.0.16"
predicates = "3.1.3"

[package.metadata.deb]
section = "utility"
extended-description = """\
Download Release Assets (dra) is a command line tool
to download release assets from GitHub.
Provides interactive and non-interactive ways to download assets
to meet your needs in different scenarios.
"""
