[package]
name = "dra"
version = "0.9.0"
edition = "2024"
authors = ["Cosimo Matteini <dev.matteini@gmail.com>"]
description = "A command line tool to download release assets from GitHub"
homepage = "https://github.com/devmatteini/dra"
repository = "https://github.com/devmatteini/dra"
documentation = "https://github.com/devmatteini/dra"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["github", "cli"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
ureq = { version = "3.0.12", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
dialoguer = "0.11.0"
indicatif = "0.18.0"
uuid = { version = "1.16.0", features = ["v4"] }
ctrlc = "3.4.7"
walkdir = "2.5.0"
zip = { version = "2.6.1", default-features = false, features = ["deflate"] }
flate2 = { version = "1.1.2", features = ["zlib"] }
tar = "0.4.44"
xz2 = "0.1.7"
bzip2 = "0.6.0"
urlencoding = "2.1.3"
itertools = "0.14.0"
url = "2.5.4"

[dev-dependencies]
test-case = "3.3.1"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[package.metadata.deb]
section = "utility"
extended-description = """\
Download Release Assets (dra) is a command line tool
to download release assets from GitHub.
Provides interactive and non-interactive ways to download assets
to meet your needs in different scenarios.
"""
